# car

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  copyToPi.sh  debugTargetBuild.sh  getPiPics.sh  main.cpp  releaseTargetBuild.sh  toolchain-rpi.cmake  unitTestBuild.sh
arduino/: CMakeLists.txt  README.md  arduino-cli.yaml  arduinoBuild.sh  arduinoUpload.sh  build.sh  downloadDeps.sh  messages.ino  motorController.ino
arduino/copilotController/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
arduino/motorController/: CMakeLists.txt  build.sh  messages.hpp  motorController.cpp  motorController.hpp  motorController.ino  msgExample.json  upload.sh
arduino/motorController/libraries/messages/: messages.hpp
arduino/netController/: .gitignore  build.sh  motorComms.ino  netController.ino  netUtility.cpp  netUtility.hpp
car/: CMakeLists.txt  car.cpp  car.hpp
cmake/: CMakeDoxygen.cmake  FetchCarDeps.cmake  PiZeroWToolchain.cmake  RaspberryPiToolchain.cmake  toolchain-rpi.cmake
common/: messages.hpp
comms/: CMakeLists.txt  irRemote.hpp  irRemoteParser.cpp  pi_client.cpp  server.hpp
control/: CMakeLists.txt  effectors.cpp  effectors.hpp  init.cpp  motorController.cpp  motorController.hpp  pwmMotor.cpp  pwmWheel.cpp  pwmWheel.hpp  servo.cpp  servo.hpp
docs/: Doxyfile.in  Doxyfile.in.bak
ds4_input/: CMakeLists.txt  Cargo.toml  startDs4Handler.sh
ds4_input/src/: ds4_device.rs  json_interface.rs  main.rs
include/: car.hpp  common_rpi.hpp  effectors.hpp  motors.hpp  pi_client.hpp  sensors.hpp  server.hpp
json_interface/: Cargo.toml
json_interface/src/: main.rs
opencv/: CMakeLists.txt  faceRecognizer.cpp  imageHandler.cpp  startFaceRecog.sh
pizeroToolchain/: .config  .config.old
ps4Input/: CMakeLists.txt  eventHandler.cpp
ps4_input/: Cargo.toml
ps4_input/src/: eventHandler.rs
raspberryPi/: CMakeLists.txt  arduinoInterface.cpp  car.cpp  car.hpp  cliMain.cpp  commandArduino.cpp  faceDetector.cpp  faceDetector.hpp  faceMain.cpp  main.cpp  piCameraCalibration.xml
raspberryPi/cameraTest/: CMakeLists.txt  cameraTest.cpp  startTest.sh
raspberryPi/faceDetector/: CMakeLists.txt  faceMain.cpp
sensors/: CMakeLists.txt  camera.cpp  init.cpp  sensorController.cpp  sensorController.hpp  sensors.cpp  sensors.hpp
src/: CMakeLists.txt  Todo.md  Todo.txt  main.cpp
src/car/: CMakeLists.txt  car.cpp  car.hpp  init.cpp
src/comms/: CMakeLists.txt  comms.hpp  message.hpp  pi_client.hpp  server.cpp  socket.cpp
src/control/: CMakeLists.txt  effectors.cpp  init.cpp  manual_control.hpp  motors.cpp  motors.hpp
src/gtest/: test_init.cpp
src/sensors/: CMakeLists.txt  init.cpp  sensors.cpp  sensors.hpp
src/util/: CMakeLists.txt  common_rpi.cpp  common_rpi.hpp  constants.hpp  init.cpp  led.cpp  led.hpp  sensors.hpp
tests/: CMakeLists.txt  testMessages.cpp  test_motors.cpp  wiringPiMocks.cpp  wiringPiMocks.hpp
util/: CMakeLists.txt  commonRpi.cpp  commonRpi.hpp  common_rpi.cpp  led.cpp  led.hpp
