[package]
name = "ds4_input"
version = "0.1.0"
authors = ["mik90 <kaliman.mike@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev-rs = "0.3.1" # https://github.com/ndesh26/evdev-rs
nix = "0.13.0"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0"
serialport = "3.3.0"